# alfresco-mark

./: .gitignore  HMark.cabal  Main.hs  README.md  build.cake  index.js  package.json  stack.yaml
HMark.hsproj/: .uuid  HMark.cabal  Main.hs  _Main.hsplay
Tests/: README.md
